Fixing spacing on large screens

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 :root {
   --background: #ffffff;
   --text: #202d3b;
@@ -17,7 +16,7 @@ body {
     font-family: Roboto, Geneva, Tahoma, sans-serif;
     font-weight: 300;
     background-color: var(--background);
-    color: var(--text)
+    color: var(--text);
 }
 
 a {
@@ -83,11 +82,7 @@ hr {
     display: flex;
     justify-content: right;
     align-content: center;
-    margin-bottom: 200px;
 
-    @media (max-width: 400px) or (max-height: 400px) {
-        margin-bottom: 100px;
-    }
     & a {
         margin: auto 10px auto 10px;
         font-weight: 300;
@@ -96,37 +91,39 @@ hr {
 
 .container {
     display: flex;
+    height: 90vh;
     justify-content: space-evenly;
+    align-content: space-evenly;
     flex-wrap: wrap;
-    margin-bottom: 50px;
 }
 
-.title {
-    margin: 0px 50px 20px 50px;
+#title {
     text-align: center;
 }
 
-.subtitle {
+#subtitle {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin-bottom: 60px;
-}
-
-.projects {
-    margin-top: 40px;
-    margin-bottom: 60px;
 }
 
 .details {
-    margin: 40px 40px 0px 40px;
-    width: 300px;
+    width: 550px;
+    height: min-content;
+    display: grid;
+    align-items: center;
+}
+
+.projects {
+    margin: 0px 50px;
+    display: flex;
+    align-items: center;
 }
 
 .detail {
-    position: absolute;
+    grid-column: 1;
+    grid-row: 1;
     visibility: hidden;
-    width: inherit;
     opacity: 0;
     transition-duration: 500ms;
 
